one more fix bag on ie

--- a/HTML/sass/main.scss
+++ b/HTML/sass/main.scss
@@ -1071,7 +1071,7 @@ font-size: 1.2667vh;
     align-items: center;
 	background-color: #FFFFFF;
 	box-shadow: 0vh 0vh 4.6296vh rgba(133, 133, 133, 0.14);
-	min-height: 15.7407vh;
+	height: 15.7407vh;
 	&__title {
 		font-weight: normal;
 		font-size: 1.6667vh;
